force-app/main/default/objects/ServiceAppointment/fields/Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Name__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <label>Study Name</label>
    <type>Text</type>
</CustomField>