force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Study_Name__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>WorkType</columns>
    <columns>AdditionalInformation</columns>
    <columns>Account</columns>
    <columns>Study_Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Study_Name__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>All Service Appointments</label>
</ListView>