force-app/main/default/objects/ServiceAppointment/listViews/MyScheduledAppointments.listView-meta.xml
<ListView>
    <fullName>MyScheduledAppointments</fullName>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>AdditionalInformation</columns>
    <columns>Account</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>StatusCategory</field>
        <operation>notEqual</operation>
        <value>6,4,5</value>
    </filters>
    <label>My Scheduled Service Appointments</label>
</ListView>