force-app/main/default/objects/ServiceAppointment/listViews/Tekton_Research_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>Tekton_Research_Service_Appointments</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Study_Name__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
  
    <columns>AdditionalInformation</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceTerritory</field>
        <operation>contains</operation>
        <value>Tekton Research</value>
    </filters>
    <filters>
        <field>Study_Site__c</field>
        <operation>contains</operation>
        <value>Tekton Research</value>
    </filters>
    <label>Tekton Research Service Appointments</label>
</ListView>